src/styles/Table.module.scss
.Table {
  &__countryTable {
    max-height: 30.75em;
    overflow-y: scroll;

    table {
      border-collapse: collapse;
      margin-right: 2px;
    }
    thead tr {
      width: 100%;
    }
    img {
      max-width: 30px;
    }
    td {
      text-align: right;
    }
    th {
      cursor: pointer;
    }
    th,
    td {
      border: 1px solid grey;
      padding: 0.5em;
    }
    td:nth-of-type(-n + 2) {
      text-align: left;
    }
  }

  &__toggle_active {
    color: red;
  }
}

